--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
+
 /* Modern Font */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -147,13 +148,12 @@
         /* Part Styling */
         .part {
             position: absolute;
-            color: white;
+            color: #000;
             text-align: center;
             line-height: 140px;
             font-size: 14px;
             cursor: move;
             border-radius: 8px;
-            transition: transform 0.2s ease, box-shadow 0.2s ease, opacity 0.2s ease;
         }
 
         .part:hover {
@@ -1616,69 +1616,31 @@ function toggleDarkMode() {
 
     const sandbox = document.getElementById("sandbox");
 
-    // Clone the sandbox to capture hidden elements
+    // Clone the sandbox to display it in the buildsheet tab
     const clonedSandbox = sandbox.cloneNode(true);
-    clonedSandbox.style.position = "absolute";
-    clonedSandbox.style.left = "-9999px"; // Move off-screen
+    clonedSandbox.id = "sandbox-duplicate";
+    clonedSandbox.style.position = "relative";
+    clonedSandbox.style.left = "0";
     clonedSandbox.style.display = "block";
-    clonedSandbox.style.backgroundColor = "#fff"; // Ensure solid background
-    document.body.appendChild(clonedSandbox);
+    clonedSandbox.style.marginTop = "20px";
+    clonedSandbox.style.border = "2px solid black"; // Highlight the duplicated sandbox
 
-    // Ensure all parts have a solid background color
-    const parts = clonedSandbox.querySelectorAll(".part");
-    parts.forEach(part => {
-        const computedStyle = window.getComputedStyle(part);
-        part.style.backgroundColor = computedStyle.backgroundColor !== "transparent" ? computedStyle.backgroundColor : "#ccc"; // Default to gray
-    });
+    // Get all dropdowns in the original sandbox
+    const originalDropdowns = sandbox.querySelectorAll(".dropdown");
 
-    // Replace all dropdowns with static text
-    const originalDropdowns = sandbox.querySelectorAll("select");
-    const clonedDropdowns = clonedSandbox.querySelectorAll("select");
-    clonedDropdowns.forEach((clonedSelect, index) => {
-        if (originalDropdowns[index]) {
-            const selectedText = originalDropdowns[index].options[originalDropdowns[index].selectedIndex].text;
-            const span = document.createElement("span");
-            span.textContent = selectedText;
-            span.style.fontFamily = window.getComputedStyle(originalDropdowns[index]).fontFamily;
-            span.style.fontSize = "45px";
-            span.style.textAlign = "center";
-            span.style.display = "inline-block";
-            span.style.width = clonedSelect.offsetWidth + "px";
-            span.style.height = clonedSelect.offsetHeight + "px";
-            span.style.lineHeight = clonedSelect.offsetHeight + "px";
-            clonedSelect.parentNode.replaceChild(span, clonedSelect);
+    // Get all dropdowns in the cloned sandbox
+    const clonedDropdowns = clonedSandbox.querySelectorAll(".dropdown");
+
+    // Copy the selected values from the original dropdowns to the cloned dropdowns
+    originalDropdowns.forEach((originalDropdown, index) => {
+        const clonedDropdown = clonedDropdowns[index];
+        if (clonedDropdown) {
+            clonedDropdown.value = originalDropdown.value; // Mirror the selected value
         }
     });
 
-    setTimeout(() => {
-        html2canvas(clonedSandbox, {
-            scrollX: 0,
-            scrollY: 0,
-            width: clonedSandbox.scrollWidth,
-            height: clonedSandbox.scrollHeight,
-            useCORS: true,
-            allowTaint: true,
-            backgroundColor: "#fff", // Ensure solid white background
-            scale: 2
-        }).then((canvas) => {
-            document.body.removeChild(clonedSandbox); // Remove cloned sandbox
-
-            const sandboxImage = document.createElement("img");
-            sandboxImage.src = canvas.toDataURL("image/png");
-            sandboxImage.style.maxWidth = "100%";
-            sandboxImage.style.height = "auto";
-            buildsheetContent.appendChild(sandboxImage);
-
-            const pickListTable = document.getElementById("pick-list-table").cloneNode(true);
-            buildsheetContent.appendChild(pickListTable);
-        }).catch((error) => {
-            console.error("Error capturing sandbox:", error);
-            const errorMessage = document.createElement("p");
-            errorMessage.textContent = "Failed to generate buildsheet. Please try again.";
-            errorMessage.style.color = "red";
-            buildsheetContent.appendChild(errorMessage);
-        });
-    }, 1500);
+    // Append the cloned sandbox to the buildsheet content
+    buildsheetContent.appendChild(clonedSandbox);
 }
     // Export Buildsheet to PDF
     function exportBuildsheetToPDF() {
