--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 filename: "buildsheet.pdf",
                 image: { type: "jpeg", quality: 0.98 },
                 html2canvas: { scale: 2 },
-                jsPDF: { unit: "mm", format: "a4", orientation: "landscape" },
+                jsPDF: { unit: "mm", format: "tabloid", orientation: "portrait" },
             });
         }
 
