--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
         }
 
         function exportToPDF() {
-            const element = document.getElementById("container");
+            const element = document.getElementById("main-tab");
             html2pdf(element, {
                 margin: 10,
                 filename: "buildsheet.pdf",
