--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@
 
         /* Dropdowns */
         .part select {
-            width: 55px;
+            width: 50px;
             padding: 1px;
             border: none;
-            border-radius: 5px;
+            border-radius: 3px;
             background: rgba(255, 255, 255, 0.9);
             backdrop-filter: blur(10px);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -279,7 +279,7 @@
             top: 0;
             cursor: pointer;
             font-size: 20px;
-            color: #007bff;
+            color: #00000;
             user-select: none;
         }
 
