--- a/index.html
+++ b/index.html
@@ -314,6 +314,10 @@
         <button onclick="addPart('NET')">Add NET</button>
         <button onclick="addPart('LINK')">Add LINK</button>
         <button onclick="addPart('IO')">Add IO</button>
+<button onclick="addPart('LINK')(4)">4 Zone</button>
+<button onclick="addPart('LINK')(8)">8 Zone</button>
+<button onclick="addPart('LINK')(12)">12 Zone</button>
+
         <button onclick="exportToPDF()">Export to PDF</button>
     </div>
 
